@@ -1,0 +1,25 @@
+<table width="{$help_width}" border="0" cellspacing="0" cellpadding="0">
+    <tr> 
+      <td><table width="100%" border="0" cellpadding="5" cellspacing="1" bgcolor="#FFFFFF">
+          <tr bgcolor="#eeeeee"> 
+            <td colspan="2" bgcolor="#eeFFee" class="title"> 
+              <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                  <td width="20" nowrap><strong><img src="{$root}img/info.gif" width="27" height="21"></strong></td>
+                  <td class=title><strong>{#help#}</strong></td>
+                </tr>
+              </table></td>
+          </tr>
+          <tr bgcolor="#eeeeee"> 
+            <td colspan="2"> 
+              <div align="justify"><strong>{$help_title}</strong><br>
+              <br>
+              {$help_text}</div>
+              <div align="center"></div></td>
+          </tr>
+        </table></td>
+    </tr>
+    <tr> 
+      <td><div align="right"><img src="{$root}img/shadow1.gif" width="289" height="9"></div></td>
+    </tr>
+  </table><Br><br><br>
