@@ -41,30 +41,4 @@
     </tr>
   </table>
   <br>
-  <table width="300" border="0" cellspacing="0" cellpadding="0">
-    <tr> 
-      <td><table width="300" border="0" cellpadding="5" cellspacing="1" bgcolor="#FFFFFF">
-          <tr bgcolor="#eeeeee"> 
-            <td colspan="2" bgcolor="#eeFFee" class="title"> 
-              <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                <tr>
-                  <td width="20" nowrap><strong><img src="{$root}img/info.gif" width="27" height="21"></strong></td>
-                  <td class=title><strong>{#help#}</strong></td>
-                </tr>
-              </table></td>
-          </tr>
-          <tr bgcolor="#eeeeee"> 
-            <td colspan="2"> 
-              <div align="justify">In order to access all the Station Management 
-                tools you have to enter your username and password, which must 
-                have been preset for you by the station administrator.</div>
-              <div align="center"></div></td>
-          </tr>
-        </table></td>
-    </tr>
-    <tr> 
-      <td><div align="right"><img src="{$root}img/shadow1.gif" width="289" height="9"></div></td>
-    </tr>
-  </table>
 </form>
-<br><br><br>
